todavia me falta ._.

--- a/SistemaHospitalUNI/src/InternalFrames/FacturaExt.form
+++ b/SistemaHospitalUNI/src/InternalFrames/FacturaExt.form
@@ -15,6 +15,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Facturar"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
